--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,8 @@
-
+@import './components/header';
+@import './components/hero';
+@import './components/features';
+@import './components/services';
+@import './components/team';
+@import './components/clients';
+@import './components/project';
+@import './components/footer';
