--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,69 +1,3 @@
-.footer {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: var(--second-bg-color);
-}
-
-.footer__container {
-  display: flex;
-  align-items: baseline;
-}
-
-.footer-contacts {
-  flex-grow: 1;
-}
-
-.footer-contacts__logo {
-  margin-bottom: 20px;
-}
-
-.logo-white {
-  color: #fff;
-}
-
-.contacts__item:not(:first-child) {
-  margin-top: 9px;
-}
-
-.contacts__link {
-  font-style: normal;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.contacts__link--white {
-  color: var(--second-text-color);
-}
-
-.footer-social {
-  margin-left: 70px;
-  margin-right: 93px;
-}
-
-.footer-social__text {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--second-text-color);
-
-  margin-bottom: 20px;
-}
-
-.social__link--secondary-color {
-  background-color: rgba(255, 255, 255, 0.1);
-  color: var(--second-text-color);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.social__link:hover .social__link--secondary-color,
-.social__link:focus .social__link--secondary-color {
-  background-color: var(--accent-bg-color);
-}
-
 .application__text {
   font-weight: 700;
   font-size: 14px;
@@ -118,11 +52,11 @@
   letter-spacing: 0.06em;
   color: var(--second-text-color);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.footer-form__btn:hover,
-.footer-form__btn:focus {
-  background-color: #188ce8;
+  &:hover,
+  &:focus {
+    background-color: #188ce8;
+  }
 }
 
 .footer-form__icon {
