--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -22,12 +22,12 @@
   min-width: 170px;
   height: 92px;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.clients__link:focus,
-.clients__link:hover {
-  color: var(--accent-color);
-  border: 1px solid var(--accent-color);
+  &:focus,
+  &:hover {
+    color: var(--accent-color);
+    border: 1px solid var(--accent-color);
+  }
 }
 
 .clients__icon {
