--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -18,23 +18,13 @@
   align-items: center;
 }
 
-.logo {
-  font-family: Raleway;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: var(--accent-color);
-  display: block;
-}
-
 .navigation__logo {
   padding-top: 24px;
   padding-bottom: 25px;
   margin-right: 93px;
 }
 
-.logo-black {
+.logo__header--black {
   color: #000;
 }
 
@@ -62,11 +52,11 @@
 
   color: var(--first-title-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.page-nav__link:hover,
-.page-nav__link:focus {
-  color: var(--accent-color);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 
 .page-nav__link.current {
@@ -94,11 +84,11 @@
   padding-top: 32px;
   padding-bottom: 32px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.auth-nav__link:hover,
-.auth-nav__link:focus {
-  color: var(--accent-color);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 
 .auth-nav__icon {
