--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -48,9 +48,9 @@
   background-color: var(--accent-bg-color);
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.hero-btn:hover,
-.hero-btn:focus {
-  background-color: #188ce8;
+  &:hover,
+  &:focus {
+    background-color: #188ce8;
+  }
 }
