--- a/sass/layout/_project.scss
+++ b/sass/layout/_project.scss
@@ -23,14 +23,14 @@
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.menu__btn:hover,
-.menu__btn:focus {
-  color: var(--second-text-color);
-  background-color: var(--accent-bg-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  &:hover,
+  &:focus {
+    color: var(--second-text-color);
+    background-color: var(--accent-bg-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
 }
 
 .project {
@@ -49,12 +49,12 @@
 .project__link {
   display: block;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.project__link:focus,
-.project__link:hover {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+  &:focus,
+  &:hover {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
 
 .project__img {
@@ -74,6 +74,11 @@
 
   transform: translateY(101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  .project__link:hover &,
+  .project__link:focus & {
+    transform: translateY(0);
+  }
 }
 
 .project__description {
@@ -93,13 +98,11 @@
   padding: 63px 24px;
   transform: translateY(101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.project__link:hover .project__description,
-.project__link:focus .project__description,
-.project__link:hover .project__img::before,
-.project__link:focus .project__img::before {
-  transform: translateY(0);
+  .project__link:hover &,
+  .project__link:focus & {
+    transform: translateY(0);
+  }
 }
 
 .project__name {
