--- a/css/main.css
+++ b/css/main.css
@@ -236,9 +236,7 @@ body {
   right: 8px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.modal__close-btn:hover,
-.modal__close-btn:focus {
+.modal__close-btn:hover, .modal__close-btn:focus {
   fill: var(--accent-color);
 }
 
@@ -280,18 +278,9 @@ body {
   padding-right: 42px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.modal__input:focus,
-.modal__input:hover,
-.modal__user-comment:focus,
-.modal__user-comment:hover {
+.modal__input:focus, .modal__input:hover {
   border-color: var(--accent-color);
   cursor: pointer;
-}
-
-.modal__input:focus + .modal__icon,
-.modal__input:hover + .modal__icon {
-  fill: var(--accent-color);
 }
 
 .modal__icon {
@@ -300,6 +289,9 @@ body {
   top: 50%;
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal__input:focus + .modal__icon, .modal__input:hover + .modal__icon {
+  fill: var(--accent-color);
 }
 
 .modal__user-comment {
@@ -312,6 +304,10 @@ body {
   outline: none;
   resize: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal__user-comment:focus, .modal__user-comment:hover {
+  border-color: var(--accent-color);
+  cursor: pointer;
 }
 
 .modal__user-comment::-moz-placeholder {
@@ -401,9 +397,7 @@ body {
   border: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.modal__sumbit-btn:hover,
-.modal__sumbit-btn:focus {
+.modal__sumbit-btn:hover, .modal__sumbit-btn:focus {
   background-color: #188ce8;
 }
 
@@ -447,9 +441,7 @@ body {
 .page-nav__item {
   position: relative;
 }
-
-.page-nav__item:not(:first-child),
-.auth-nav__item:not(:first-child) {
+.page-nav__item:not(:first-child) {
   margin-left: 50px;
 }
 
@@ -467,7 +459,6 @@ body {
 .page-nav__link.current {
   color: var(--accent-color);
 }
-
 .page-nav__link.current::after {
   content: "";
   width: 100%;
@@ -477,6 +468,10 @@ body {
   border-radius: 2px;
   position: absolute;
   bottom: -1px;
+}
+
+.auth-nav__item:not(:first-child) {
+  margin-left: 50px;
 }
 
 .auth-nav__link {
@@ -555,7 +550,6 @@ body {
   width: 270px;
   display: block;
 }
-
 .features__item:not(:first-child) {
   margin-left: 30px;
 }
