--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -49,11 +49,11 @@
   top: 8px;
   right: 8px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.modal__close-btn:hover,
-.modal__close-btn:focus {
-  fill: var(--accent-color);
+  &:hover,
+  &:focus {
+    fill: var(--accent-color);
+  }
 }
 
 .modal__title {
@@ -93,19 +93,12 @@
   padding-left: 42px;
   padding-right: 42px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.modal__input:focus,
-.modal__input:hover,
-.modal__user-comment:focus,
-.modal__user-comment:hover {
-  border-color: var(--accent-color);
-  cursor: pointer;
-}
-
-.modal__input:focus + .modal__icon,
-.modal__input:hover + .modal__icon {
-  fill: var(--accent-color);
+  &:focus,
+  &:hover {
+    border-color: var(--accent-color);
+    cursor: pointer;
+  }
 }
 
 .modal__icon {
@@ -114,6 +107,11 @@
   top: 50%;
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  .modal__input:focus + &,
+  .modal__input:hover + & {
+    fill: var(--accent-color);
+  }
 }
 
 .modal__user-comment {
@@ -126,6 +124,12 @@
   outline: none;
   resize: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:focus,
+  &:hover {
+    border-color: var(--accent-color);
+    cursor: pointer;
+  }
 }
 
 .modal__user-comment::placeholder {
@@ -199,9 +203,9 @@
   padding: 10px 55px;
   border: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.modal__sumbit-btn:hover,
-.modal__sumbit-btn:focus {
-  background-color: #188ce8;
+  &:hover,
+  &:focus {
+    background-color: #188ce8;
+  }
 }
