--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -5,10 +5,10 @@
 .features__item {
   width: 270px;
   display: block;
-}
 
-.features__item:not(:first-child) {
-  margin-left: 30px;
+  &:not(:first-child) {
+    margin-left: 30px;
+  }
 }
 
 .features__img {
