--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -38,11 +38,10 @@
 
 .page-nav__item {
   position: relative;
-}
 
-.page-nav__item:not(:first-child),
-.auth-nav__item:not(:first-child) {
-  margin-left: 50px;
+  &:not(:first-child) {
+    margin-left: 50px;
+  }
 }
 
 .page-nav__link {
@@ -61,19 +60,23 @@
 
 .page-nav__link.current {
   color: var(--accent-color);
+
+  &::after {
+    content: '';
+    width: 100%;
+    height: 4px;
+    display: block;
+
+    background: var(--accent-bg-color);
+    border-radius: 2px;
+
+    position: absolute;
+    bottom: -1px;
+  }
 }
 
-.page-nav__link.current::after {
-  content: '';
-  width: 100%;
-  height: 4px;
-  display: block;
-
-  background: var(--accent-bg-color);
-  border-radius: 2px;
-
-  position: absolute;
-  bottom: -1px;
+.auth-nav__item:not(:first-child) {
+  margin-left: 50px;
 }
 
 .auth-nav__link {
