--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -7,3 +7,17 @@
   color: var(--accent-color);
   display: block;
 }
+
+.navigation__logo {
+  padding-top: 24px;
+  padding-bottom: 25px;
+  margin-right: 93px;
+}
+
+.logo__black {
+  color: #000;
+}
+
+.logo__white {
+  color: #fff;
+}
