--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -130,13 +130,13 @@
     border-color: var(--accent-color);
     cursor: pointer;
   }
-}
 
-.modal__user-comment::placeholder {
-  font-size: 12px;
-  line-height: 1.16;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
+  &::placeholder {
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+  }
 }
 
 .modal__field-check {
