--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -2,3 +2,11 @@
   padding-top: 94px;
   padding-bottom: 94px;
 }
+
+.section--padding-top {
+  padding-top: 0;
+}
+
+.section--background {
+  background-color: #f5f4fa;
+}
