--- a/sass/components/_social.scss
+++ b/sass/components/_social.scss
@@ -21,6 +21,17 @@
   }
 }
 
+.social__link--secondary-color {
+  background-color: rgba(255, 255, 255, 0.1);
+  color: var(--second-text-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  .social__link:hover &,
+  .social__link:focus & {
+    background-color: var(--accent-bg-color);
+  }
+}
+
 .social__icon {
   fill: currentColor;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
