--- a/sass/components/_title.scss
+++ b/sass/components/_title.scss
@@ -1,8 +1,12 @@
-.title {
+.section__title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--first-title-color);
+}
+
+.section__title--margin-bottom {
+  margin-bottom: 50px;
 }
