--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -18,16 +18,6 @@
   align-items: center;
 }
 
-.navigation__logo {
-  padding-top: 24px;
-  padding-bottom: 25px;
-  margin-right: 93px;
-}
-
-.logo__header--black {
-  color: #000;
-}
-
 .page-nav,
 .auth-nav {
   display: flex;
@@ -58,7 +48,7 @@
   }
 }
 
-.page-nav__link.current {
+.page-nav__link--current {
   color: var(--accent-color);
 
   &::after {
