--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -16,7 +16,7 @@
   padding-bottom: 200px;
 }
 
-.hero-title {
+.hero__title {
   width: 696px;
   margin-left: auto;
   margin-right: auto;
@@ -31,7 +31,7 @@
   color: var(--second-title-color);
 }
 
-.hero-btn {
+.hero__btn {
   padding: 6px 22px;
   border: transparent;
   box-sizing: border-box;
@@ -44,7 +44,7 @@
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
-  color: var(--second-title-color);
+  color: var(--second-text-color);
   background-color: var(--accent-bg-color);
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
